[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "langchain>=1.3.6",
    "langchain-google-genai>=4.2.4",
    "langchain-unstructured[local]>=1.0.1",
    "langgraph>=1.2.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
